# tactile_toolbox

./: .catkin_lint  .clang-format  .clang-tidy  .flake8  .pre-commit-config.yaml  .travis.rosinstall  .travis.rosinstall.indigo  .travis.sh  .travis.yml  CMakeLists.txt  README.md  generate_calib.py  package.xml  plugin_description.xml  rosinstall
.github/workflows/: ci.yaml  format.yaml
app/: tactile_pcl_node.cpp  tactile_test_publisher_node.cpp
contact_force_estimator/: CMakeLists.txt  package.xml
contact_force_estimator/include/contact_force_estimator/: contact_force_estimator.h  taxel.h  taxel_group.h
contact_force_estimator/src/: contact_force_estimator.cpp  node.cpp  taxel.cpp  taxel_group.cpp
gazebo_plugins/gazebo_ros_contact/: CMakeLists.txt  package.xml
gazebo_plugins/gazebo_ros_contact/include/gazebo_ros_contact/: gazebo_ros_bumper.h  gazebo_ros_contact.h
gazebo_plugins/gazebo_ros_contact/src/: gazebo_ros_bumper.cpp  gazebo_ros_contact.cpp
gazebo_plugins/gazebo_ros_contact/test/: contact_test.world  test_contact.launch  test_contact.py
gazebo_plugins/gazebo_ros_tactile/: CMakeLists.txt  package.xml
gazebo_plugins/gazebo_ros_tactile/include/gazebo_ros_tactile/: gazebo_ros_tactile.h
gazebo_plugins/gazebo_ros_tactile/src/: gazebo_ros_tactile.cpp
include/tactile_state_publisher/: tactile_state_publisher.hpp
launch/: tactile_state_publisher.launch
msg/: TactileContact.msg  TactileContacts.msg  TactileState.msg
rqt_bag_tactile_plugins/: CMakeLists.txt  package.xml  plugins.xml  setup.py
rqt_bag_tactile_plugins/src/rqt_bag_tactile_plugins/: tactile_helpers.py  tactile_plugin.py
rviz_tactile_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
rviz_tactile_plugins/include/rviz_tactile_plugins/: range_property.h  tactile_array_visual.h  tactile_contact_display.h  tactile_state_display.h  tactile_taxels_visual.h  tactile_visual_base.h
rviz_tactile_plugins/src/: CMakeLists.txt  color_map.cpp  color_map.h  glove_display_group.cpp  glove_display_group.h  group_property.cpp  group_property.h  plugin_init.cpp  range_property.cpp  range_property.h  tactile_array_visual.cpp  tactile_array_visual.h  tactile_contact_display.cpp  tactile_contact_display.h  tactile_state_display.cpp  tactile_state_display.h  tactile_taxels_visual.cpp  tactile_taxels_visual.h  tactile_visual_base.cpp  tactile_visual_base.h
src/: CMakeLists.txt  color_map.cpp  color_map.h  conversions.h  group_property.cpp  group_property.h  merger.cpp  merger_node.cpp  parser.cpp  parser.h  pcl_collector.cpp  pcl_collector.h  plugin_init.cpp  range_property.cpp  range_property.h  tactile_array_visual.cpp  tactile_array_visual.h  tactile_contact_display.cpp  tactile_contact_display.h  tactile_pcl.cpp  tactile_pcl_node.cpp  tactile_state_display.cpp  tactile_state_display.h  tactile_state_publisher.cpp  tactile_taxels_visual.cpp  tactile_taxels_visual.h  tactile_visual_base.cpp  tactile_visual_base.h  taxel.cpp  taxel.h  taxel_group.cpp  taxel_group.h
src/tactile_pcl/: tactile_pcl.cpp  tactile_pcl.h
tactile_calibration/tactile_calibration_generator/: CMakeLists.txt  README.md  package.xml
tactile_calibration/tactile_calibration_generator/scripts/: generate_calib.py
tactile_calibration/tactile_calibration_generator/test/: test.yaml
tactile_calibration/tactile_calibration_recorder/: CMakeLists.txt  README.md  package.xml
tactile_calibration/tactile_calibration_tools/: CMakeLists.txt  README.md  package.xml  setup.py
tactile_calibration/tactile_calibration_tools/scripts/: generate_calib.py  record_calib.py
tactile_calibration/tactile_calibration_tools/src/tactile_calibration_tools/: calibration_utils.py  mapping_utils.py
tactile_calibration/tactile_state_calibrator/: CMakeLists.txt  package.xml
tactile_calibration/tactile_state_calibrator/config/: test.calib.yaml  test.multicalib.yaml
tactile_calibration/tactile_state_calibrator/src/: tactile_state_calibrator.cpp  tactile_state_calibrator.h
tactile_merger/: CMakeLists.txt  package.xml
tactile_merger/include/tactile_merger/: merger.h  taxel_group.h
tactile_merger/src/: CMakeLists.txt  merger.cpp  merger.h  merger_node.cpp  taxel.cpp  taxel.h  taxel_group.cpp  taxel_group.h
tactile_msgs/: CMakeLists.txt  README.md  package.xml
tactile_msgs/msg/: TactileContact.msg  TactileContacts.msg  TactileState.msg
tactile_pcl/: CMakeLists.txt  package.xml
tactile_pcl/src/: CMakeLists.txt  contact_forwarder.h  conversions.h  message_store.h  pcl_collector.cpp  pcl_collector.h  tactile_pcl.h  tactile_pcl_node.cpp
tactile_state_calibrator/: CMakeLists.txt
tactile_state_calibrator/config/: raw.calib.yaml
tactile_state_calibrator/launch/: tactile_state_calibrator.launch
tactile_state_calibrator/src/: tactile_state_calibrator.cpp  tactile_state_calibrator.h
tactile_state_publisher/: CMakeLists.txt  package.xml  setup.py
tactile_state_publisher/launch/: tactile_state_publisher.launch
tactile_state_publisher/scripts/: tactile_bias.py
tactile_state_publisher/src/: tactile_state_publisher.cpp  tactile_state_publisher.h
tactile_state_publisher/src/tactile_state_publisher/: tactile_bias.py  tactile_bias_module.py
tactile_toolbox/: CMakeLists.txt  package.xml
test/: tactile_test_publisher_node.cpp  unit_test.cpp
urdf_tactile/: CMakeLists.txt  README.md  package.xml
urdf_tactile/include/urdf_tactile/: cast.h  parser.h  sensor.h  sort.h  tactile.h  taxel_info.h  taxel_info_iterator.h
urdf_tactile/src/: CMakeLists.txt  parser.cpp  parser.h  sort.cpp  taxel_info_iterator.cpp  utils.cpp  utils.h
urdf_tactile/test/: CMakeLists.txt  parser.cpp  tactile.urdf  tools.cpp
