<?xml version="1.0"?>
<package>
  <name>tactile_msgs</name>
  <version>0.1.0</version>
  <description>Tactile messages and contact messages</description>

  <maintainer email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</maintainer>

  <license>GPLv3</license>

  <author email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</author>
  <author email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
