<?xml version="1.0"?>
<package>
  <name>tactile_pcl</name>
	<version>0.1.0</version>
	<description>The tactile_pcl package converts incoming tactile message into pcl pointclouds</description>

	<maintainer email="troehlig@techfak.uni-bielefeld.de">Tobias Roehlig</maintainer>

	<license>GPLv3</license>

	<author email="troehlig@techfak.uni-bielefeld.de">Tobias Roehlig</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>tactile_msgs</build_depend>
	<build_depend>pcl_conversions</build_depend>

  <run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>tactile_msgs</run_depend>
	<run_depend>pcl_conversions</run_depend>

	<export>
  </export>
</package>
