<?xml version="1.0"?>
<package format="3">
  <name>contact_force_estimator</name>
  <version>0.1.0</version>
  <description>merge raw tactile data into TactileContact msgs</description>

  <maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>
  <author email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Use build_depend for packages required at compile time: -->
  <build_depend>eigen</build_depend>
  <depend>urdf_tactile</depend>
  <depend>tactile_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
