<?xml version="1.0"?>
<package format="3">
  <name>rviz_tactile_plugins</name>
  <version>0.1.0</version>
  <description>rviz tactile plugins</description>

  <maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>
  <author email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</author>

  <license>BSD</license>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rviz</depend>
  <depend>urdf_tactile</depend>
  <depend>tactile_msgs</depend>
  <depend>tactile_filters</depend>
  <build_depend>tf</build_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
