<?xml version="1.0"?>
<package>
  <name>tactile_merger</name>
  <version>0.1.0</version>
  <description>merge raw tactile data into TactileContact msgs</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/agni_tf_tools</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Use build_depend for packages required at compile time: -->
  <build_depend>eigen</build_depend>
  <build_depend>urdf_tactile</build_depend>
  <build_depend>tactile_msgs</build_depend>

  <!-- Use run_depend for packages you need at runtime: -->
  <run_depend>urdf_tactile</run_depend>
  <run_depend>tactile_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
