<?xml version="1.0"?>
<package format="3">
  <name>tactile_msgs</name>
  <version>0.1.0</version>
  <description>Tactile messages and contact messages</description>

  <maintainer email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</maintainer>

  <license>LGPLv3</license>

  <author email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</author>
  <author email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_runtime</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>

  <export>
  </export>
</package>
