<?xml version="1.0"?>
<package format="3">
<name>tactile_pcl</name>
  <version>0.1.0</version>
  <description>Convert TactileState or TactileContact messages into pcl messages</description>

  <maintainer email="troehlig@techfak.uni-bielefeld.de">Tobias Roehlig</maintainer>

  <license>GPLv3</license>

  <author email="troehlig@techfak.uni-bielefeld.de">Tobias Roehlig</author>
  <author email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</author>
  <maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>tactile_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <depend>urdf_tactile</depend>

  <export>
  </export>
</package>
