<?xml version="1.0"?>
<package format="3">
  <name>tactile_state_publisher</name>
  <version>0.1.0</version>
  <description>The tactile_state_publisher package</description>

  <maintainer email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</maintainer>

  <author email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</author>
  <author email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <depend>urdf_tactile</depend>
  <depend>tactile_msgs</depend>

  <exec_depend>rospy</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
