<package format="3">
  <name>tactile_toolbox</name>
  <version>0.1.0</version>
  <description>
    <tt>tactile_toolbox</tt> contains packages to handle various kinds of tactile sensors.
  </description>

  <author email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</author>
  <maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/ubi-agni/tactile_toolbox</url>
  <url type="bugtracker">https://github.com/ubi-agni/tactile_toolbox/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>tactile_msgs</exec_depend>
  <exec_depend>urdf_tactile</exec_depend>
  <exec_depend>tactile_state_publisher</exec_depend>
  <exec_depend>tactile_state_calibrator</exec_depend>
  <exec_depend>tactile_calibration_tools</exec_depend>
  <exec_depend>contact_force_estimator</exec_depend>
  <exec_depend>tactile_pcl</exec_depend>
  <exec_depend>rviz_tactile_plugins</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
