<?xml version="1.0"?>
<package format="3">
  <name>urdf_tactile</name>
  <version>0.1.0</version>
  <description>handle tactile sensor descriptions in URDF</description>

  <maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>
  <author email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>urdf</depend>
  <depend>pluginlib</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <urdf plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
