<?xml version="1.0"?>
<package format="3">
  <name>urdf_tactile</name>
  <version>0.1.0</version>
  <description>handle tactile sensor descriptions in URDF</description>

  <maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>
  <author email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <depend>liburdfdom-dev</depend>
  <depend>roscpp</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
