<?xml version="1.0"?>
<package>
  <name>gazebo_ros_contact</name>
  <version>0.1.0</version>
  <description>The gazebo_ros_contact package derived from gazebo_ros_bumpers</description>

  <maintainer email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</maintainer>

  <license>BSD</license>
  <license>Apache 2.0</license>

  <author>Lars Oetermann</author>
  <author>John Hsu</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tactile_msgs</build_depend>

  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tactile_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
